# ingatin

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-0aca01ee69d29443b9359930db3a191b7d6c3398eae8da4c2125ba0a5b7ad59e.json  query-5c7ba99ceb6547af3a0cc0eaddde3a6894c9b8905d9190271a11d4d6fc929880.json  query-687076960b046af44cf9df0335fc10e38c8be3c5c0ad2cd6031f005ae746e80b.json  query-ed803ecc6a586a0f7a6c765e1640f6d73aaed169eaf9111216dfffe29c8889ad.json
database/: schema.sql
src/: config.rs  main.rs
src/client/: gemini.rs  waha.rs
src/domain/: mod.rs  reminder_job.rs  task.rs
src/dto/: gemini.rs  mod.rs  waha.rs
src/handler/: webhook.rs
src/repository/: mod.rs  reminder_repository.rs  task_repository.rs
src/scheduler/: runner.rs
