[package]
name = "ingatin"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.23.0", features = ["v4", "serde"] }
axum = "0.8.8"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "chrono", "uuid"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"